change to .gitignore
Signed-off-by: Radoslaw Ryckowski <radek.ryckowski@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ bin/deploy-*.ts
 # Python script state
 .monitoring-state.json
 scripts/__pycache__/
-config/account.config
+config/accounts.config
